# file-fridge

./: .coveragerc  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  DYNAMIC_UI_SUMMARY.md  Dockerfile  GITHUB_AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  manage_user.py  pyproject.toml  requirements.txt  test_scan_processor.py
.github/workflows/: container-byuild-push.yml  release.yml
.jules/: sentinel.md
alembic/: env.py
alembic/versions/: 08a8fa52d987_multi_user_support.py  1660b8cad608_add_cold_storage_locations_many_to_many.py  16885c3bd99d_add_file_encryption_root_key.py  1801504f0d51_merge_encryption_and_remote_transfer_.py  1c10588157df_merge_v0_0_43_migration_paths.py  1eab9db4e223_add_filetransactionhistory_audit_trail_.py  2c525e893192_add_index_to_request_nonces_timestamp_.py  3a6a9581dcf1_add_scan_tracking_columns_to_monitored_.py  3ccd8558b99e_add_strategy_to_remote_transfer_jobs.py  563e30c9d3e0_add_server_encryption_keys_table.py  5c67e9e65fc0_merge_multi_user_and_bidirectional_heads.py  5f96d3126e3a_initial_database_schema.py  63d866f824e9_update_truststatus_enum_values_to_.py  726412e8862d_initial_schema_setup.py  7cf2c0e8a2e3_add_encryption_support.py  7ec9bf2ee4c7_add_is_available_to_cold_storage_.py  836bbd0f8c8d_consolidated_v0_0_43_security_and_.py  935faa16ea14_add_public_private_key_infrastructure_.py  a_unified_migration.py  ab498f37013c_merge_heads.py  add_bidirectional_transfer_support.py  add_instance_url_and_name.py  add_missing_instance_metadata_columns.py  add_notification_encryption.py  c31860e1a401_add_conflict_resolution_to_remote_.py  fix_schema_inconsistencies.py  (+11 more)
app/: __init__.py  config.py  database.py  database_migrations.py  main.py  models.py  schemas.py  security.py
docs/: API.md  ATIME_VERIFICATION.md  CONFIGURATION_GUIDE.md  DOCKER.md  FEATURES.md  INSTALLATION.md  NOTIFICATIONS.md  TAGGING.md  UPDATES.md  USAGE.md
scripts/: fix_database_schema.py  setup-test-env.sh  setup_instance.py  simulate_transfer.py  test-watch.sh  test.sh  verify_multi_user.py
static/: manifest.json  service-worker.js
templates/: base.html  dashboard.html  files.html  login.html  notifiers.html  remote_files.html  settings.html  stats.html  tags.html
tests/: conftest.py  test_database.py  test_notification_system.py  test_rate_limit.py  test_rate_limit_bypass.py  test_rate_limit_security.py  test_security_exploit_fix.py  test_wildcard_injection.py
(+175 files in other folders)
